<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:id="@+id/carrier"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:visibility="gone"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="tk.giesecke.myaircon.myAirCon"
	tools:ignore="ButtonStyle"
	tools:showIn="@layout/my_air_con">

	<ImageButton
		android:id="@+id/im_icon_ca"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		android:contentDescription="@string/bt_txt_icon"
		android:src="@drawable/ic_livingroom"/>

	<TextView
		android:id="@+id/txt_device_ca"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="false"
		android:layout_alignParentStart="false"
		android:layout_alignParentTop="true"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:layout_toRightOf="@+id/im_icon_ca"
		android:text="@string/bt_txt_device_living"
		android:textAppearance="?android:attr/textAppearanceLarge"/>

	<Button
		android:id="@+id/bt_auto_ca"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:checked="true"
		android:onClick="onClick"
		android:text="@string/bt_txt_auto"
		android:visibility="visible"/>

	<View
		android:id="@+id/bt_auto_hl_ca"
		android:layout_width="match_parent"
		android:layout_height="5dp"
		android:layout_alignLeft="@+id/bt_auto_ca"
		android:layout_alignRight="@+id/bt_auto_ca"
		android:layout_below="@+id/bt_auto_ca"
		android:layout_marginLeft="1dp"
		android:layout_marginRight="1dp"
		android:layout_marginTop="-5dp"
		android:background="@android:color/holo_red_light"/>

	<View
		android:id="@+id/div_1_ca"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_below="@+id/bt_auto_hl_ca"
		android:layout_marginTop="5dp"
		android:background="@android:color/darker_gray"/>

	<Button
		android:id="@+id/bt_on_off_ca"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/div_1_ca"
		android:checked="false"
		android:onClick="onClick"
		android:text="@string/bt_txt_power"/>

	<View
		android:id="@+id/bt_on_off_hl_ca"
		android:layout_width="match_parent"
		android:layout_height="5dp"
		android:layout_below="@+id/bt_on_off_ca"
		android:layout_marginLeft="1dp"
		android:layout_marginRight="1dp"
		android:layout_marginTop="-5dp"
		android:background="@android:color/holo_red_light"/>

	<View
		android:id="@+id/div_2_ca"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_below="@+id/bt_on_off_hl_ca"
		android:layout_marginTop="5dp"
		android:background="@android:color/darker_gray"/>

	<TextView
		android:id="@+id/txt_func_bar_ca"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/div_2_ca"
		android:gravity="center_horizontal"
		android:text="@string/bt_txt_func_bar"
		android:textAppearance="?android:attr/textAppearanceLarge"/>

	<LinearLayout
		android:id="@+id/bar_func_txt_ca"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/txt_func_bar_ca"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/txt_fanspeed_ca"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/bt_txt_fanspeed"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/bar_func_btn_ca"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/bar_func_txt_ca"
		android:layout_centerHorizontal="true"
		android:orientation="horizontal">

		<Button
			android:id="@+id/bt_fanspeed_ca"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:checked="false"
			android:onClick="onClick"
			android:text="@string/bt_txt_fan_high"/>

		<Button
			android:id="@+id/bt_sweep_ca"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:checked="false"
			android:onClick="onClick"
			android:text="@string/bt_txt_sweep"/>

		<Button
			android:id="@+id/bt_turbo_ca"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:checked="false"
			android:onClick="onClick"
			android:text="@string/bt_txt_turbo"/>

		<Button
			android:id="@+id/bt_ion_ca"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:checked="false"
			android:onClick="onClick"
			android:text="@string/bt_txt_ion"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/bar_func_light_ca"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/bar_func_btn_ca"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:layout_marginTop="-5dp"
		android:orientation="horizontal">

		<View
			android:id="@+id/bt_fanspeed_hl_ca"
			android:layout_width="match_parent"
			android:layout_height="5dp"
			android:layout_marginLeft="1dp"
			android:layout_marginRight="1dp"
			android:layout_weight="1"
			android:background="@android:color/darker_gray"
			android:visibility="invisible"/>

		<View
			android:id="@+id/bt_sweep_hl_ca"
			android:layout_width="match_parent"
			android:layout_height="5dp"
			android:layout_marginLeft="1dp"
			android:layout_marginRight="1dp"
			android:layout_weight="1"
			android:background="@android:color/darker_gray"/>

		<View
			android:id="@+id/bt_turbo_hl_ca"
			android:layout_width="match_parent"
			android:layout_height="5dp"
			android:layout_marginLeft="1dp"
			android:layout_marginRight="1dp"
			android:layout_weight="1"
			android:background="@android:color/holo_red_light"/>

		<View
			android:id="@+id/bt_ion_hl_ca"
			android:layout_width="match_parent"
			android:layout_height="5dp"
			android:layout_marginLeft="1dp"
			android:layout_marginRight="1dp"
			android:layout_weight="1"
			android:background="@android:color/holo_red_light"/>

	</LinearLayout>

	<View
		android:id="@+id/div_3_ca"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_below="@+id/bar_func_light_ca"
		android:layout_marginTop="5dp"
		android:background="@android:color/darker_gray"/>

	<TextView
		android:id="@+id/txt_mode_bar_ca"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/div_3_ca"
		android:layout_centerHorizontal="true"
		android:text="@string/bt_txt_mode_bar"
		android:textAppearance="?android:attr/textAppearanceLarge"/>

	<LinearLayout
		android:id="@+id/bar_mode_btn_ca"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/txt_mode_bar_ca"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:orientation="horizontal">

		<Button
			android:id="@+id/bt_autom_ca"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:checked="false"
			android:onClick="onClick"
			android:text="@string/bt_txt_auto"/>

		<Button
			android:id="@+id/bt_cool_ca"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:checked="false"
			android:onClick="onClick"
			android:text="@string/bt_txt_cool"
			/>

		<Button
			android:id="@+id/bt_dry_ca"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:checked="false"
			android:onClick="onClick"
			android:text="@string/bt_txt_dry"/>

		<Button
			android:id="@+id/bt_fan_ca"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:checked="true"
			android:onClick="onClick"
			android:text="@string/bt_txt_fan"
			/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/bar_mode_light_ca"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/bar_mode_btn_ca"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:layout_marginTop="-5dp"
		android:orientation="horizontal">

		<View
			android:id="@+id/bt_autom_hl_ca"
			android:layout_width="match_parent"
			android:layout_height="5dp"
			android:layout_marginLeft="1dp"
			android:layout_marginRight="1dp"
			android:layout_weight="1"
			android:background="@android:color/darker_gray"/>

		<View
			android:id="@+id/bt_cool_hl_ca"
			android:layout_width="match_parent"
			android:layout_height="5dp"
			android:layout_marginLeft="1dp"
			android:layout_marginRight="1dp"
			android:layout_weight="1"
			android:background="@android:color/darker_gray"/>

		<View
			android:id="@+id/bt_dry_hl_ca"
			android:layout_width="match_parent"
			android:layout_height="5dp"
			android:layout_marginLeft="1dp"
			android:layout_marginRight="1dp"
			android:layout_weight="1"
			android:background="@android:color/holo_red_light"/>

		<View
			android:id="@+id/bt_fan_hl_ca"
			android:layout_width="match_parent"
			android:layout_height="5dp"
			android:layout_marginLeft="1dp"
			android:layout_marginRight="1dp"
			android:layout_weight="1"
			android:background="@android:color/holo_red_light"/>

	</LinearLayout>

	<View
		android:id="@+id/div_4_ca"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_below="@+id/bar_mode_btn_ca"
		android:layout_marginTop="5dp"
		android:background="@android:color/darker_gray"/>

	<TextView
		android:id="@+id/txt_temp_bar_ca"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/div_4_ca"
		android:layout_centerHorizontal="true"
		android:text="@string/bt_txt_temp_bar"
		android:textAppearance="?android:attr/textAppearanceLarge"/>

	<LinearLayout
		android:id="@+id/bar_temp_btn_ca"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/txt_temp_bar_ca"
		android:layout_centerHorizontal="true"
		android:orientation="horizontal">

		<Button
			android:id="@+id/bt_plus_ca"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="2dp"
			android:layout_weight="1"
			android:background="@android:color/holo_green_light"
			android:gravity="center_horizontal"
			android:onClick="onClick"
			android:text="@string/bt_txt_plus"
			android:textSize="30sp"
			android:textStyle="bold"
			tools:ignore="ButtonStyle"/>

		<Button
			android:id="@+id/bt_minus_ca"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="2dp"
			android:layout_weight="1"
			android:background="@android:color/holo_red_light"
			android:gravity="center_horizontal"
			android:onClick="onClick"
			android:text="@string/bt_txt_minus"
			android:textSize="30sp"
			android:textStyle="bold"
			tools:ignore="ButtonStyle"/>

	</LinearLayout>

	<TextView
		android:id="@+id/txt_cons_ca"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/bar_temp_btn_ca"
		android:layout_marginTop="10dp"
		android:gravity="center_horizontal"
		android:text="@string/txt_consumption"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textStyle="bold"/>

	<TextView
		android:id="@+id/txt_temp_ca"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_alignTop="@+id/txt_cons_ca"
		android:gravity="center_horizontal"
		android:text="@string/txt_cool_temp"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textStyle="bold"/>

	<TextView
		android:id="@+id/txt_cons_val_ca"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/txt_cons_ca"
		android:gravity="center_horizontal"
		android:text="@string/txt_consumption"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textStyle="bold"/>

	<TextView
		android:id="@+id/txt_temp_val_ca"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="false"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/txt_cons_ca"
		android:gravity="center_horizontal"
		android:text="@string/txt_cool_temp"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textStyle="bold"/>

	<TextView
		android:id="@+id/txt_auto_status_ca"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignTop="@+id/txt_cons_ca"
		android:layout_centerHorizontal="true"
		android:gravity="center_horizontal"
		android:text="@string/txt_auto_status"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textStyle="bold"/>

	<TextView
		android:id="@+id/txt_auto_status_val_ca"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/txt_auto_status_ca"
		android:layout_centerHorizontal="true"
		android:gravity="center_horizontal"
		android:text="@string/txt_auto_status"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textStyle="bold"/>

</RelativeLayout>
